add structure namespace

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import 'icons';
 @import 'form';
 @import 'site_wide';
+@import 'structure';
 @import 'navigation';
 @import 'user';
 @import 'product_backlog';
