--- a/app/views/pages/new_feature.html.erb
+++ b/app/views/pages/new_feature.html.erb
@@ -9,7 +9,7 @@
 </div>
 <div class="row">
   <div class="col-lg-12 mx-auto">
-    <div class="sw-Main">
+    <div class="st-Main">
       <div class="fe-Background fe-Background-lg">
         <form>
           <div class="form-group">
