--- a/app/views/pages/release_burndown.html.erb
+++ b/app/views/pages/release_burndown.html.erb
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
   <div class="col-lg-14 mx-auto">
-    <div class="sw-Main">
+    <div class="st-Main">
       <div class="rp-Background">
         <div class="rp-Chart">
           <%= line_chart(
