--- a/app/views/pages/show_feature.html.erb
+++ b/app/views/pages/show_feature.html.erb
@@ -9,18 +9,18 @@
 </div>
 <div class="row">
   <div class="col-lg-12 mx-auto">
-    <div class="sw-Main">
+    <div class="st-Main">
       <div class="fe-Background fe-Background-lg">
         <div class="fe-Detail">
-          <div class="fe-Detail_Section sw-Editable">
+          <div class="fe-Detail_Section st-Editable">
             <p class="fe-Content">
               ユーザーとして、Todoリストが自動で保存されて欲しい。
               <br>
               それは、保存するのを忘れることがあるからだ。
             </p>
-            <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+            <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
           </div>
-          <div class="fe-Detail_Section sw-Editable">
+          <div class="fe-Detail_Section st-Editable">
             <div class="fe-Detail_Point">
               <span class="fe-Point">
                 13
@@ -32,7 +32,7 @@
                 </span>
               <p>
             </div>
-            <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+            <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
           </div>
         </div>
         <hr />
@@ -43,45 +43,45 @@
             </h2>
           </div>
           <div class="fe-AcceptanceCriteria_Body">
-            <div class="fe-AcceptanceCriterion sw-Editable">
+            <div class="fe-AcceptanceCriterion st-Editable">
               <i class="icon-Check icon-Check-disabled"></i>
               <span class="fe-AcceptanceCriterion_Content">
                 タイトル編集後に自動保存されること
               </span>
-              <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
-              <%= link_to '削除する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
             </div>
-            <div class="fe-AcceptanceCriterion sw-Editable">
+            <div class="fe-AcceptanceCriterion st-Editable">
               <i class="icon-Check icon-Check-disabled"></i>
               <span class="fe-AcceptanceCriterion_Content">
                 Todo編集後に自動保存されること
               </span>
-              <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
-              <%= link_to '削除する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
             </div>
-            <div class="fe-AcceptanceCriterion sw-Editable">
+            <div class="fe-AcceptanceCriterion st-Editable">
               <i class="icon-Check icon-Check-disabled"></i>
               <span class="fe-AcceptanceCriterion_Content">
                 Todo削除後に自動保存されること
               </span>
-              <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
-              <%= link_to '削除する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
             </div>
-            <div class="fe-AcceptanceCriterion sw-Editable">
+            <div class="fe-AcceptanceCriterion st-Editable">
               <i class="icon-Check icon-Check-disabled"></i>
               <span class="fe-AcceptanceCriterion_Content">
                 Todo完了後に自動保存されること
               </span>
-              <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
-              <%= link_to '削除する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
             </div>
-            <div class="fe-AcceptanceCriterion sw-Editable">
+            <div class="fe-AcceptanceCriterion st-Editable">
               <i class="icon-Check icon-Check-disabled"></i>
               <span class="fe-AcceptanceCriterion_Content">
                 Todo未完了後に自動保存されること
               </span>
-              <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
-              <%= link_to '削除する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
             </div>
           </div>
           <div class="fe-AcceptanceCriterionForm">
