--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
   <div class="col">
-    <div class="sw-Main">
+    <div class="st-Main">
       <div class="pbl-Container_Header">
         <%= link_to page_url(:new_feature), class: 'btn btn-sm btn-success' do %>
           <i class="icon-Add icon-Prefix"></i>
@@ -19,11 +19,11 @@
         <div class="fe-Background">
           <div class="fe-Summary_Body">
             <i class="fe-Anchor"></i>
-            <div class="fe-Summary_Content sw-Editable">
+            <div class="fe-Summary_Content st-Editable">
               <span class="fe-Content">
                 訪問者として、ユーザー登録したい。
               </span>
-              <%= link_to '編集する', page_url(:show_feature), class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '編集する', page_url(:show_feature), class: 'st-Editable_Action sw-Link sw-Link-sm' %>
             </div>
             <span class="fe-Point fe-Summary_Point">
               1
@@ -33,11 +33,11 @@
         <div class="fe-Background">
           <div class="fe-Summary_Body">
             <i class="fe-Anchor"></i>
-            <div class="fe-Summary_Content sw-Editable">
+            <div class="fe-Summary_Content st-Editable">
               <span class="fe-Content">
                 ユーザーとして、Todoリストが自動で保存されてほしい。
               </span>
-              <%= link_to '編集する', page_url(:show_feature), class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '編集する', page_url(:show_feature), class: 'st-Editable_Action sw-Link sw-Link-sm' %>
             </div>
             <span class="fe-Point fe-Summary_Point">
               13
@@ -47,11 +47,11 @@
         <div class="fe-Background">
           <div class="fe-Summary_Body">
             <i class="fe-Anchor"></i>
-            <div class="fe-Summary_Content sw-Editable">
+            <div class="fe-Summary_Content st-Editable">
               <span class="fe-Content">
                 ユーザーとして、リマインドの間隔を設定したい。
               </span>
-              <%= link_to '編集する', page_url(:show_feature), class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '編集する', page_url(:show_feature), class: 'st-Editable_Action sw-Link sw-Link-sm' %>
             </div>
             <span class="fe-Point fe-Summary_Point">
               8
