--- a/app/views/pages/new_feature.html.erb
+++ b/app/views/pages/new_feature.html.erb
@@ -9,20 +9,14 @@
 </div>
 <div class="row">
   <div class="col-lg-12 mx-auto">
-    <div class="sw-Main">
+    <div class="st-Main">
       <div class="fe-Background fe-Background-lg">
         <form>
           <div class="form-group">
             <label>
-              タイトル:
+              フィーチャーの内容
             </label>
-            <input type="text" placeholder="フィーチャーをひとことで表すと？" class="form-control">
-          </div>
-          <div class="form-group">
-            <label>
-              詳細:
-            </label>
-            <textarea class="form-control" rows="3"></textarea>
+            <textarea class="form-control" rows="3" placeholder="ex: ユーザーストーリー"></textarea>
           </div>
           <div class="frm-Actions">
             <button class="btn btn-success">
