--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
   <div class="col">
-    <div class="sw-Main">
+    <div class="st-Main">
       <div class="pbl-Container_Header">
         <%= link_to page_url(:new_feature), class: 'btn btn-sm btn-success' do %>
           <i class="icon-Add icon-Prefix"></i>
@@ -19,7 +19,12 @@
         <div class="fe-Background">
           <div class="fe-Summary_Body">
             <i class="fe-Anchor"></i>
-            <%= link_to 'ユーザー登録の説明', page_url(:show_feature), class: 'fe-Title' %>
+            <div class="fe-Summary_Content st-Editable">
+              <span class="fe-Content">
+                訪問者として、ユーザー登録したい。
+              </span>
+              <%= link_to '編集する', page_url(:show_feature), class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+            </div>
             <span class="fe-Point fe-Summary_Point">
               1
             </span>
@@ -28,7 +33,12 @@
         <div class="fe-Background">
           <div class="fe-Summary_Body">
             <i class="fe-Anchor"></i>
-            <%= link_to 'Todoリストの自動保存', page_url(:show_feature), class: 'fe-Title'  %>
+            <div class="fe-Summary_Content st-Editable">
+              <span class="fe-Content">
+                ユーザーとして、Todoリストが自動で保存されてほしい。
+              </span>
+              <%= link_to '編集する', page_url(:show_feature), class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+            </div>
             <span class="fe-Point fe-Summary_Point">
               13
             </span>
@@ -37,7 +47,12 @@
         <div class="fe-Background">
           <div class="fe-Summary_Body">
             <i class="fe-Anchor"></i>
-            <%= link_to 'リマインド設定間隔', page_url(:show_feature), class: 'fe-Title'  %>
+            <div class="fe-Summary_Content st-Editable">
+              <span class="fe-Content">
+                ユーザーとして、リマインドの間隔を設定したい。
+              </span>
+              <%= link_to '編集する', page_url(:show_feature), class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+            </div>
             <span class="fe-Point fe-Summary_Point">
               8
             </span>
