--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,17 +1,18 @@
-<ul>
-  <li>
-    <%= link_to 'New Feature', page_url(:new_feature) %>
-  </li>
-  <li>
-    <%= link_to 'Product Backlog', page_url(:product_backlog) %>
-  </li>
-  <li>
-    <%= link_to 'Feature Detail', page_url(:show_feature) %>
-  </li>
-  <li>
-    <%= link_to 'Relase Plan', page_url(:release_plan) %>
-  </li>
-  <li>
-    <%= link_to 'Release Burndown', page_url(:release_burndown) %>
-  </li>
-</ul>
+<div class="row sw-Main">
+  <div class="col">
+    <ul>
+      <li>
+        <%= link_to 'New Feature', page_url(:new_feature) %>
+      </li>
+      <li>
+        <%= link_to 'Product Backlog', page_url(:product_backlog) %>
+      </li>
+      <li>
+        <%= link_to 'Feature Detail', page_url(:show_feature) %>
+      </li>
+      <li>
+        <%= link_to 'Relase Plan', page_url(:release_plan) %>
+      </li>
+    </ul>
+  </div>
+</div>
