--- a/app/views/pages/new_feature.html.erb
+++ b/app/views/pages/new_feature.html.erb
@@ -7,25 +7,23 @@
     </span>
   </div>
 </div>
-<div class="row">
+<div class="row sw-Main">
   <div class="col-lg-12 mx-auto">
-    <div class="st-Main">
-      <div class="fe-Background fe-Background-lg">
-        <form>
-          <div class="form-group">
-            <label>
-              フィーチャーの内容
-            </label>
-            <textarea class="form-control" rows="3" placeholder="ex: ユーザーストーリー"></textarea>
-          </div>
-          <div class="frm-Actions">
-            <button class="btn btn-success">
-              追加する
-            </button>
-            <%= link_to 'キャンセル', page_url(:product_backlog), class: 'frm-Action_Cancel' %>
-          </div>
-        </form>
-      </div>
+    <div class="fe-Background fe-Background-lg">
+      <form>
+        <div class="form-group">
+          <label>
+            フィーチャーの内容
+          </label>
+          <textarea class="form-control" rows="3" placeholder="ex: ユーザーストーリー"></textarea>
+        </div>
+        <div class="frm-Actions">
+          <button class="btn btn-success">
+            追加する
+          </button>
+          <%= link_to 'キャンセル', page_url(:product_backlog), class: 'frm-Action_Cancel' %>
+        </div>
+      </form>
     </div>
   </div>
 </div>
