--- a/app/views/pages/release_plan.html.erb
+++ b/app/views/pages/release_plan.html.erb
@@ -6,9 +6,14 @@
     </span>
   </div>
 </div>
-<div class="row">
-  <div class="col">
-    <div class="st-Main">
+<div class="row sw-Main">
+  <div class="col-lg-20 rp-Background mx-auto">
+    <div class="col-lg-10">
+      <%= render 'release_plan_chart' %>
+      <%= render 'release_plan_spec' %>
+    </div>
+    <div class="col-lg-12">
+      <%= render 'release_plan_pbl' %>
     </div>
   </div>
 </div>
