--- a/app/views/pages/show_feature.html.erb
+++ b/app/views/pages/show_feature.html.erb
@@ -7,95 +7,93 @@
     </span>
   </div>
 </div>
-<div class="row">
+<div class="row sw-Main">
   <div class="col-lg-12 mx-auto">
-    <div class="st-Main">
-      <div class="fe-Background fe-Background-lg">
-        <div class="fe-Detail">
-          <div class="fe-Detail_Section st-Editable">
-            <p class="fe-Content">
-              ユーザーとして、Todoリストが自動で保存されて欲しい。
-              <br>
-              それは、保存するのを忘れることがあるからだ。
-            </p>
-            <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-          </div>
-          <div class="fe-Detail_Section st-Editable">
-            <div class="fe-Detail_Point">
+    <div class="fe-Background fe-Background-lg">
+      <div class="fe-Detail">
+        <div class="fe-Detail_Section st-Editable">
+          <p class="fe-Content">
+            ユーザーとして、Todoリストが自動で保存されて欲しい。
+            <br>
+            それは、保存するのを忘れることがあるからだ。
+          </p>
+          <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+        </div>
+        <div class="fe-Detail_Section st-Editable">
+          <div class="fe-Detail_Point">
+            <span class="fe-Point">
+              13
+            </span>
+            <p class="fe-PointBase">
+              Todoの削除
               <span class="fe-Point">
-                13
+                2
               </span>
-              <p class="fe-PointBase">
-                Todoの削除
-                <span class="fe-Point">
-                  2
-                </span>
-              <p>
-            </div>
+            <p>
+          </div>
+          <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+        </div>
+      </div>
+      <hr />
+      <div class="fe-AcceptanceCriteria">
+        <div class="fe-AcceptanceCriteria_Header">
+          <h2 class="fe-AcceptanceCriteria_Title">
+            受け入れ基準:
+          </h2>
+        </div>
+        <div class="fe-AcceptanceCriteria_Body">
+          <div class="fe-AcceptanceCriterion st-Editable">
+            <i class="icon-Check icon-Check-disabled"></i>
+            <span class="fe-AcceptanceCriterion_Content">
+              タイトル編集後に自動保存されること
+            </span>
             <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+            <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+          </div>
+          <div class="fe-AcceptanceCriterion st-Editable">
+            <i class="icon-Check icon-Check-disabled"></i>
+            <span class="fe-AcceptanceCriterion_Content">
+              Todo編集後に自動保存されること
+            </span>
+            <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+            <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+          </div>
+          <div class="fe-AcceptanceCriterion st-Editable">
+            <i class="icon-Check icon-Check-disabled"></i>
+            <span class="fe-AcceptanceCriterion_Content">
+              Todo削除後に自動保存されること
+            </span>
+            <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+            <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+          </div>
+          <div class="fe-AcceptanceCriterion st-Editable">
+            <i class="icon-Check icon-Check-disabled"></i>
+            <span class="fe-AcceptanceCriterion_Content">
+              Todo完了後に自動保存されること
+            </span>
+            <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+            <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+          </div>
+          <div class="fe-AcceptanceCriterion st-Editable">
+            <i class="icon-Check icon-Check-disabled"></i>
+            <span class="fe-AcceptanceCriterion_Content">
+              Todo未完了後に自動保存されること
+            </span>
+            <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+            <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
           </div>
         </div>
-        <hr />
-        <div class="fe-AcceptanceCriteria">
-          <div class="fe-AcceptanceCriteria_Header">
-            <h2 class="fe-AcceptanceCriteria_Title">
-              受け入れ基準:
-            </h2>
-          </div>
-          <div class="fe-AcceptanceCriteria_Body">
-            <div class="fe-AcceptanceCriterion st-Editable">
-              <i class="icon-Check icon-Check-disabled"></i>
-              <span class="fe-AcceptanceCriterion_Content">
-                タイトル編集後に自動保存されること
-              </span>
-              <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-              <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-            </div>
-            <div class="fe-AcceptanceCriterion st-Editable">
-              <i class="icon-Check icon-Check-disabled"></i>
-              <span class="fe-AcceptanceCriterion_Content">
-                Todo編集後に自動保存されること
-              </span>
-              <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-              <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-            </div>
-            <div class="fe-AcceptanceCriterion st-Editable">
-              <i class="icon-Check icon-Check-disabled"></i>
-              <span class="fe-AcceptanceCriterion_Content">
-                Todo削除後に自動保存されること
-              </span>
-              <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-              <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-            </div>
-            <div class="fe-AcceptanceCriterion st-Editable">
-              <i class="icon-Check icon-Check-disabled"></i>
-              <span class="fe-AcceptanceCriterion_Content">
-                Todo完了後に自動保存されること
-              </span>
-              <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-              <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-            </div>
-            <div class="fe-AcceptanceCriterion st-Editable">
-              <i class="icon-Check icon-Check-disabled"></i>
-              <span class="fe-AcceptanceCriterion_Content">
-                Todo未完了後に自動保存されること
-              </span>
-              <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-              <%= link_to '削除する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-            </div>
-          </div>
-          <div class="fe-AcceptanceCriterionForm">
-            <form>
-              <div class="input-group">
-                <input type="text" class="form-control">
-                <div class="input-group-append">
-                  <button type="submit" class="btn btn-success">
-                    <i class="fa fa-plus"></i>
-                  </button>
-                </div>
+        <div class="fe-AcceptanceCriterionForm">
+          <form>
+            <div class="input-group">
+              <input type="text" class="form-control">
+              <div class="input-group-append">
+                <button type="submit" class="btn btn-success">
+                  <i class="fa fa-plus"></i>
+                </button>
               </div>
-            </form>
-          </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
