--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -14,49 +14,6 @@
         新しいフィーチャーを追加
       <% end -%>
     </div>
-    <div class="col-lg-12 pbl-Container_Body">
-      <div class="fe-Background">
-        <div class="fe-Summary_Body">
-          <i class="fe-Anchor"></i>
-          <div class="fe-Summary_Content st-Editable">
-            <span class="fe-Content">
-              訪問者として、ユーザー登録したい。
-            </span>
-            <%= link_to '編集する', page_url(:show_feature), class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-          </div>
-          <span class="fe-Point fe-Summary_Point">
-            1
-          </span>
-        </div>
-      </div>
-      <div class="fe-Background">
-        <div class="fe-Summary_Body">
-          <i class="fe-Anchor"></i>
-          <div class="fe-Summary_Content st-Editable">
-            <span class="fe-Content">
-              ユーザーとして、Todoリストが自動で保存されてほしい。
-            </span>
-            <%= link_to '編集する', page_url(:show_feature), class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-          </div>
-          <span class="fe-Point fe-Summary_Point">
-            13
-          </span>
-        </div>
-      </div>
-      <div class="fe-Background">
-        <div class="fe-Summary_Body">
-          <i class="fe-Anchor"></i>
-          <div class="fe-Summary_Content st-Editable">
-            <span class="fe-Content">
-              ユーザーとして、リマインドの間隔を設定したい。
-            </span>
-            <%= link_to '編集する', page_url(:show_feature), class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-          </div>
-          <span class="fe-Point fe-Summary_Point">
-            8
-          </span>
-        </div>
-      </div>
-    </div>
+    <%= render partial: 'pbl_list', locals: { item_count: 10 } %>
   </div>
 </div>
