--- a/app/views/pages/release_plan.html.erb
+++ b/app/views/pages/release_plan.html.erb
@@ -8,12 +8,14 @@
 </div>
 <div class="row sw-Main">
   <div class="col-lg-20 rp-Background mx-auto">
-    <div class="col-lg-10">
-      <%= render 'release_plan_chart' %>
-      <%= render 'release_plan_spec' %>
-    </div>
-    <div class="col-lg-12">
-      <%= render 'release_plan_pbl' %>
+    <div class="row">
+      <div class="col-lg-10">
+        <%= render 'release_plan_chart' %>
+        <%= render 'release_plan_spec' %>
+      </div>
+      <div class="col-lg-12">
+        <%= render 'release_plan_pbl' %>
+      </div>
     </div>
   </div>
 </div>
