--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -14,6 +14,8 @@
         新しいフィーチャーを追加
       <% end -%>
     </div>
-    <%= render partial: 'pbl_list', locals: { item_count: 10 } %>
+    <div class="col-lg-12 pbl-Container_Body">
+      <%= render partial: 'pbl_list', locals: { template: 'pbl_item', item_count: 10 } %>
+    </div>
   </div>
 </div>
