--- a/app/views/pages/_release_plan_pbl.html.erb
+++ b/app/views/pages/_release_plan_pbl.html.erb
@@ -1,3 +1,8 @@
 <div class="rp-Section_PBL">
+  <div class="rp-Section_Header">
+    <h2 class="rp-Section_Title">
+      リリース予定フィーチャー
+    </h2>
+  </div>
   <%= render partial: 'pbl_list', locals: { template: 'release_pbl_item', item_count: 20 } %>
 </div>
