--- a/app/views/pages/_release_plan_spec.html.erb
+++ b/app/views/pages/_release_plan_spec.html.erb
@@ -1,7 +1,9 @@
 <div class="rp-Section_Spec">
-  <h2 class="rp-Spec_Header">
-    スケジュール
-  </h2>
+  <div class="rp-Section_Header">
+    <h2 class="rp-Section_Title">
+      スケジュール
+    </h2>
+  </div>
   <form>
     <div class="rp-Spec_Row">
       <label class="rp-Spec_Label">
@@ -43,9 +45,11 @@
   </form>
 </div>
 <div class="rp-Section_Spec">
-  <h2 class="rp-Spec_Header">
-    ベロシティ
-  </h2>
+  <div class="rp-Section_Header">
+    <h2 class="rp-Section_Title">
+      ベロシティ
+    </h2>
+  </div>
   <form>
     <div class="rp-Spec_Row">
       <label class="rp-Spec_Label">
