--- a/app/views/pages/_release_plan_pbl.html.erb
+++ b/app/views/pages/_release_plan_pbl.html.erb
@@ -3,6 +3,11 @@
     <h2 class="rp-Section_Title">
       リリース予定フィーチャー
     </h2>
+    <div class="rp-TotalPoint_Wrapper">
+      <span class="rp-TotalPoint">
+        250
+      </span>
+    </div>
   </div>
   <%= render partial: 'pbl_list', locals: { template: 'release_pbl_item', item_count: 20 } %>
 </div>
