--- a/app/assets/stylesheets/bootstrap_variables.scss
+++ b/app/assets/stylesheets/bootstrap_variables.scss
@@ -48,7 +48,7 @@ $container-max-widths: (
 ) !default;
 
 $grid-columns:                22 !default;
-$grid-gutter-width:           15px !default;
+$grid-gutter-width:           2rem !default;
 
 $border-color:                $gray-300 !default;
 $border-radius:               .325rem !default;
