--- a/app/views/pages/_release_plan_spec.html.erb
+++ b/app/views/pages/_release_plan_spec.html.erb
@@ -1,79 +1,70 @@
-<div class="rp-Section_Spec">
-  <div class="rp-Section_Header">
-    <h2 class="rp-Section_Title">
+<div class="rp-Section_Plan">
+  <div class="rp-Plan_Header">
+    <h2 class="rp-Plan_Title">
       スケジュール
     </h2>
   </div>
-  <form>
-    <div class="rp-Spec_Row">
-      <label class="rp-Spec_Label">
-        リリース予定日
-      </label>
-      <div class="col-lg-12">
-        <input type="text" value="2018/10/10" class="form-control" />
-      </div>
-    </div>
-    <div class="rp-Spec_Row">
-      <label class="rp-Spec_Label">
-        予定イテレーション数
-      </label>
-      <div class="col-lg-12">
-        <input type="text" value="12" class="form-control rp-Factor" disabled />
-      </div>
-    </div>
-    <div class="rp-Spec_Row">
-      <label class="rp-Spec_Label">
-        イテレーションの長さ
-      </label>
-      <div class="col-lg-12">
-        <select class="form-control rp-Factor" disabled>
-          <option>
-            1週間
-          </option>
-          <option>
-            2週間
-          </option>
-          <option>
-            3週間
-          </option>
-          <option>
-            4週間
-          </option>
-        </select>
-      </div>
-    </div>
-  </form>
+  <table class="rp-Factor">
+    <tbody>
+      <tr>
+        <th>
+          リリース予定日
+        </th>
+        <td>
+          2018/10/10
+        </td>
+      </tr>
+      <tr>
+        <th>
+          予定イテレーション数
+        </th>
+        <td>
+          12
+        </td>
+      </tr>
+      <tr>
+        <th>
+          イテレーションの長さ
+        </th>
+        <td>
+          1週間
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
-<div class="rp-Section_Spec">
-  <div class="rp-Section_Header">
-    <h2 class="rp-Section_Title">
+<div class="rp-Section_Plan">
+  <div class="rp-Plan_Header">
+    <h2 class="rp-Plan_Title">
       ベロシティ
     </h2>
   </div>
-  <form>
-    <div class="rp-Spec_Row">
-      <label class="rp-Spec_Label">
-        直近
-      </label>
-      <div class="col-lg-12">
-        <input type="text" value="20" class="form-control rp-Factor" disabled />
-      </div>
-    </div>
-    <div class="rp-Spec_Row">
-      <label class="rp-Spec_Label">
-        平均
-      </label>
-      <div class="col-lg-12">
-        <input type="text" value="21" class="form-control rp-Factor" disabled />
-      </div>
-    </div>
-    <div class="rp-Spec_Row">
-      <label class="rp-Spec_Label">
-        ワースト3平均
-      </label>
-      <div class="col-lg-12">
-        <input type="text" value="15" class="form-control rp-Factor" disabled />
-      </div>
-    </div>
-  </form>
+  <table class="rp-Factor">
+    <tbody>
+      <tr>
+        <th>
+          直近
+        </th>
+        <td>
+          20
+        </td>
+      </tr>
+      <tr>
+        <th>
+          全イテレーション平均
+        </th>
+        <td>
+          21
+        </td>
+      </tr>
+      <tr>
+        <th>
+          ワースト3平均
+        </th>
+        <td>
+          15
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
