--- a/app/views/pages/_release_plan_pbl.html.erb
+++ b/app/views/pages/_release_plan_pbl.html.erb
@@ -1,6 +1,6 @@
 <div class="rp-Section_PBL">
-  <div class="rp-Section_Header">
-    <h2 class="rp-Section_Title">
+  <div class="rp-Feature_Header">
+    <h2 class="rp-Plan_Title">
       リリース予定フィーチャー
     </h2>
     <div class="rp-TotalPoint_Wrapper">
