--- a/app/views/pages/_release_plan_pbl.html.erb
+++ b/app/views/pages/_release_plan_pbl.html.erb
@@ -3,6 +3,7 @@
     <h2 class="rp-Plan_Title">
       リリース予定フィーチャー
     </h2>
+    <i class="rp-Fixed"></i>
     <div class="rp-TotalPoint_Wrapper">
       <span class="rp-TotalPoint">
         250
