--- a/app/views/pages/_release_plan_spec.html.erb
+++ b/app/views/pages/_release_plan_spec.html.erb
@@ -1,5 +1,6 @@
 <div class="rp-Section_Plan">
   <div class="rp-Plan_Header">
+    <i class="rp-Fixed rp-Fixed-on"></i>
     <h2 class="rp-Plan_Title">
       スケジュール
     </h2>
