--- a/app/assets/stylesheets/release_plan.scss
+++ b/app/assets/stylesheets/release_plan.scss
@@ -1,3 +1,15 @@
+.rp-Fixed {
+  @extend .fa, .fa-map-pin;
+  @include circle(1.25rem);
+  margin: 0 .5rem;
+  color: $white;
+  background-color: $gray-300;
+}
+
+.rp-Fixed-on {
+  background-color: theme-color('success');
+}
+
 .rp-Section_Chart {
   @include card($white);
   padding: .5rem 1rem .5rem .5rem;
