--- a/app/views/pages/release_plan.html.erb
+++ b/app/views/pages/release_plan.html.erb
@@ -6,9 +6,16 @@
     </span>
   </div>
 </div>
-<div class="row">
-  <div class="col">
-    <div class="st-Main">
+<div class="row sw-Main">
+  <div class="col-lg-21 rp-Background mx-auto">
+    <div class="row">
+      <div class="col-lg-11">
+        <%= render 'release_plan_chart' %>
+        <%= render 'release_plan_spec' %>
+      </div>
+      <div class="col-lg-11">
+        <%= render 'release_plan_pbl' %>
+      </div>
     </div>
   </div>
 </div>
