--- a/app/assets/stylesheets/release_plan.scss
+++ b/app/assets/stylesheets/release_plan.scss
@@ -1,4 +1,86 @@
-.rp-Background {
+.rp-Fixed {
+  @extend .fa, .fa-map-pin;
+  @include circle(1.25rem);
+  margin: 0 .5rem;
+  color: $white;
+  background-color: $gray-300;
+}
+
+.rp-Fixed-on {
+  background-color: theme-color('success');
+}
+
+.rp-Section_Chart {
   @include card($white);
-  padding: 1rem;
+  padding: .5rem 1rem .5rem .5rem;
+  margin-bottom: 1rem;
+}
+
+.rp-Section_Plan {
+  margin: 1.5rem 0;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.rp-Plan_Header {
+  text-align: right;
+  margin-bottom: .5rem;
+}
+
+.rp-Plan_Title {
+  display: inline-block;
+  font-size: $font-size-base;
+  color: $white;
+  background-color: $gray-800;
+  padding: .125rem .75rem;
+  border-radius: .25rem;
+}
+
+.rp-Factor {
+  max-width: 20rem;
+  margin-left: auto;
+
+  tr {
+    border-bottom: 1px solid $gray-500;
+  }
+
+  th {
+    text-align: right;
+    padding-right: 1rem;
+    height: 2.25rem;
+    color: $secondary
+  }
+
+  td {
+    text-align: left;
+    font-size: $font-size-lg;
+    font-weight: bold;
+  }
+}
+
+.rp-Feature_Header {
+  @extend .d-flex, .align-items-center;
+  padding-bottom: .25rem;
+  border-bottom: 1px solid $gray-500;
+  margin-bottom: 1rem;
+}
+
+.rp-TotalPoint_Wrapper {
+  @extend .ml-auto;
+}
+
+.rp-TotalPoint {
+  display: inline-block;
+  font-weight: bold;
+  padding: .125rem .5rem;
+  border-radius: 1rem;
+  background-color: lighten($purple, 40%);
+  color: $purple;
+}
+
+.rp-Feature_Check {
+  font-size: 1.5em;
+  margin-right: .5rem;
 }
