--- a/app/views/pages/show_feature.html.erb
+++ b/app/views/pages/show_feature.html.erb
@@ -11,28 +11,17 @@
   <div class="col-lg-12 mx-auto">
     <div class="fe-Background fe-Background-lg">
       <div class="fe-Detail">
-        <div class="fe-Detail_Section st-Editable">
+        <div class="fe-Detail_Main">
           <p class="fe-Content">
             ユーザーとして、Todoリストが自動で保存されて欲しい。
             <br>
             それは、保存するのを忘れることがあるからだ。
           </p>
-          <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+          <span class="fe-Detail_Point fe-Point">
+            13
+          </span>
         </div>
-        <div class="fe-Detail_Section st-Editable">
-          <div class="fe-Detail_Point">
-            <span class="fe-Point">
-              13
-            </span>
-            <p class="fe-PointBase">
-              Todoの削除
-              <span class="fe-Point">
-                2
-              </span>
-            <p>
-          </div>
-          <%= link_to '編集する', '#', class: 'st-Editable_Action sw-Link sw-Link-sm' %>
-        </div>
+        <%= link_to '編集する', '#', class: 'sw-Link sw-Link-sm' %>
       </div>
       <hr />
       <div class="fe-AcceptanceCriteria">
