--- a/app/views/pages/show_feature.html.erb
+++ b/app/views/pages/show_feature.html.erb
@@ -8,7 +8,7 @@
   </div>
 </div>
 <div class="row sw-Main">
-  <div class="col-lg-12 offset-lg-5">
+  <div class="col-lg-12 mx-auto">
     <%= render 'feature_detail' %>
   </div>
 </div>
