--- a/app/views/pages/edit_feature.html.erb
+++ b/app/views/pages/edit_feature.html.erb
@@ -3,7 +3,7 @@
     <%= link_to 'Leave me alone!', page_url(:project) -%>
     <%= link_to 'プロダクトバックログ', page_url(:product_backlog) -%>
     <span class="current">
-      フィーチャーの詳細
+      フィーチャーの編集
     </span>
   </div>
 </div>
@@ -11,17 +11,49 @@
   <div class="col-lg-13 mx-auto">
     <div class="fe-Background fe-Background-lg">
       <div class="fe-Detail">
-        <div class="fe-Detail_Main">
-          <p class="fe-Content">
-            ユーザーとして、Todoリストが自動で保存されて欲しい。
-            <br>
-            それは、保存するのを忘れることがあるからだ。
-          </p>
-          <span class="fe-Detail_Point fe-Point fe-Point-lg">
-            13
-          </span>
-        </div>
-        <%= link_to '編集する', page_url(:edit_feature), class: 'sw-Link sw-Link-sm' %>
+        <form>
+          <div class="form-group">
+            <label>
+              フィーチャーの内容
+            </label>
+            <textarea class="form-control" rows="3" placeholder="">ユーザーとして、Todoリストが自動で保存されて欲しい。それは、保存するのを忘れることがあるからだ。</textarea>
+          </div>
+          <div class="form-group">
+            <label class="frm-Element-block">
+              フィーチャーの大きさ
+            </label>
+            <% [0,1,2,3,5,8,13,20,40,100].each do |n| %>
+              <div class="fe-PointRadio">
+                <input type="radio" id="point<%= n %>" name="point" class="custom-control-input">
+                <label class="fe-PointLabel" for="point<%= n %>">
+                  <%= n %>
+                </label>
+              </div>
+            <% end -%>
+          </div>
+          <div class="form-group">
+            <label>
+              他のフィーチャーの大きさを確認
+            </label>
+            <select class="form-control" readonly>
+              <option>
+                User Story AAA (5)
+              </option>
+              <option>
+                User Story BBB (13)
+              </option>
+              <option>
+                User Story CCC (13)
+              </option>
+            </select>
+          </div>
+          <div class="frm-Actions">
+            <button class="btn btn-success">
+              保存する
+            </button>
+            <%= link_to 'キャンセル', page_url(:show_feature), class: 'frm-Action_Cancel' %>
+          </div>
+        </form>
       </div>
       <hr />
       <div class="fe-AcceptanceCriteria">
