--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -11,6 +11,9 @@
         <%= link_to 'Feature Detail', page_url(:show_feature) %>
       </li>
       <li>
+        <%= link_to 'Edit Feature', page_url(:edit_feature) %>
+      </li>
+      <li>
         <%= link_to 'Relase Plan', page_url(:release_plan) %>
       </li>
     </ul>
