--- a/app/views/pages/show_feature.html.erb
+++ b/app/views/pages/show_feature.html.erb
@@ -12,7 +12,7 @@
     <div class="fe-Background fe-Background-lg">
       <div class="fe-Detail">
         <div class="fe-Detail_Main">
-          <p class="fe-Content">
+          <p class="fe-Content fe-Content-lg">
             ユーザーとして、Todoリストが自動で保存されて欲しい。
             <br>
             それは、保存するのを忘れることがあるからだ。
@@ -23,7 +23,6 @@
         </div>
         <%= link_to '編集する', page_url(:edit_feature), class: 'sw-Link sw-Link-sm' %>
       </div>
-      <hr />
       <div class="fe-AcceptanceCriteria">
         <div class="fe-AcceptanceCriteria_Header">
           <h2 class="fe-AcceptanceCriteria_Title">
