--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import 'site_wide';
 @import 'structure';
 @import 'navigation';
+@import 'public';
 @import 'user';
 @import 'product_backlog';
 @import 'feature';
