--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,6 +2,9 @@
   <div class="col">
     <ul>
       <li>
+        <%= link_to 'Sign in', page_url(:sign_in) %>
+      </li>
+      <li>
         <%= link_to 'New Feature', page_url(:new_feature) %>
       </li>
       <li>
