--- a/app/views/pages/_pbl_item.html.erb
+++ b/app/views/pages/_pbl_item.html.erb
@@ -5,7 +5,7 @@
       <span class="fe-Content">
         <%= content %>
       </span>
-      <%= link_to '編集する', page_url(:show_feature), class: 'st-Editable_Action sw-Link sw-Link-sm' %>
+      <%= link_to '確認する', page_url(:show_feature), class: 'st-Editable_Action sw-Link sw-Link-sm' %>
     </div>
     <span class="fe-Point fe-Summary_Point">
       <%= point %>
