--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -19,6 +19,9 @@
       <li>
         <%= link_to 'Relase Plan', page_url(:release_plan) %>
       </li>
+      <li>
+        <%= link_to 'Join to team', page_url(:join_to_team) %>
+      </li>
     </ul>
   </div>
 </div>
