--- a/app/assets/stylesheets/team.scss
+++ b/app/assets/stylesheets/team.scss
@@ -7,9 +7,10 @@
 
 .tm-Join_ProjectName {
   font-weight: bold;
+  font-size: $font-size-lg;
 }
 
 .tm-Join_Guide {
   @include nf;
-  margin: .5rem 0 2rem;
+  margin: 1rem 0;
 }
