--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -22,6 +22,9 @@
       <li>
         <%= link_to 'Join to team', page_url(:join_to_team) %>
       </li>
+      <li>
+        <%= link_to 'Invite people', page_url(:invite_people) %>
+      </li>
     </ul>
   </div>
 </div>
