--- a/app/views/pages/join_to_team.html.erb
+++ b/app/views/pages/join_to_team.html.erb
@@ -1,15 +1,22 @@
 <div class="row sw-Main">
-  <div class="col-lg-16 mx-auto">
-    <div class="tm-Join">
-      <h1 class="tm-Join_ProjectName">
-        Leave me alone!
-      </h1>
-      <p class="tm-Join_Guide">
+  <div class="col-lg-12 mx-auto">
+    <div class="sw-Section">
+      <div class="sw-Section_Header">
+        <h2 class="sw-Section_Title">
+          チームへの参加
+        </h2>
+      </div>
+      <div class="sw-Section_Body">
+        <p class="sw-Subtext mb-2">
         このプロジェクトチームへ参加しますか？
-      </p>
-      <button class="btn btn-success">
-        参加する
-      </button>
+        </p>
+        <h5 class="sw-Strong mb-3">
+          Leave me alone!
+        </h3>
+        <button class="btn btn-success">
+          参加する
+        </button>
+      </div>
     </div>
   </div>
 </div>
