--- a/app/assets/stylesheets/site_wide.scss
+++ b/app/assets/stylesheets/site_wide.scss
@@ -1,9 +1,14 @@
-.sw-Link-sm {
-  font-size: $font-size-sm;
-}
-
 .sw-Subtext {
   color: $secondary;
+}
+
+.sw-Strong {
+  font-size: $font-size-lg;
+  font-weight: bold;
+}
+
+.sw-Link-sm {
+  font-size: $font-size-sm;
 }
 
 .sw-Main {
@@ -16,14 +21,13 @@
 
 .sw-Section_Header {
   border-bottom: 1px solid $gray-100;
-  padding: 1rem 1rem .75rem;
+  padding: 1rem 1.5rem .75rem;
 }
 
 .sw-Section_Title {
   font-size: $font-size-lg;
-  font-weight: bold;
 }
 
 .sw-Section_Body {
-  padding: 1rem 1rem 1.5rem;
+  padding: 1rem 1.5rem 1.5rem;
 }
