--- a/app/views/pages/join_to_team.html.erb
+++ b/app/views/pages/join_to_team.html.erb
@@ -7,7 +7,7 @@
         </h2>
       </div>
       <div class="sw-Section_Body">
-        <p class="sw-Subtext mb-2">
+        <p class="sw-Subtext">
         このプロジェクトチームへ参加しますか？
         </p>
         <h5 class="sw-Strong mb-3">
