--- a/app/assets/stylesheets/site_wide.scss
+++ b/app/assets/stylesheets/site_wide.scss
@@ -10,12 +10,33 @@
   font-size: $font-size-sm;
 }
 
+.sw-List {
+  @include no-mb;
+  font-size: $font-size-lg;
+
+  li {
+    margin-bottom: .25rem;
+  }
+
+  li:last-child {
+    margin-bottom: 0;
+  }
+}
+
 .sw-Main {
   margin-top: 1.25rem;
 }
 
+.sw-Main-lg {
+  margin-top: 3.5rem;
+}
+
 .sw-Section {
   @include card;
+}
+
+.sw-Section-align-center {
+  text-align: center;
 }
 
 .sw-Section_Header {
@@ -28,6 +49,17 @@
   color: $gray-600;
 }
 
+.sw-Section_Title-border {
+  display: inline-block;
+  border-bottom: 1px solid $gray-400;
+  padding-bottom: .25rem;
+}
+
 .sw-Section_Body {
   padding: 1rem 1.5rem 1.5rem;
+}
+
+.sw-Section_Footer {
+  border-top: 1px solid $gray-100;
+  padding: .75rem 1.5rem;
 }
