--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -12,6 +12,14 @@
       </li>
     </ul>
     <h5>
+      User
+    </h5>
+    <ul>
+      <li>
+        <%= link_to 'Project list', page_url(:project_list) %>
+      </li>
+    </ul>
+    <h5>
       Project
     </h5>
     <ul>
