--- a/app/views/pages/join_to_team.html.erb
+++ b/app/views/pages/join_to_team.html.erb
@@ -1,4 +1,4 @@
-<div class="row sw-Main">
+<div class="row sw-Main sw-Main-lg">
   <div class="col-lg-12 mx-auto">
     <div class="sw-Section">
       <div class="sw-Section_Header">
