--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,9 @@
 @import 'product_backlog';
 @import 'feature';
 @import 'release_plan';
+@import 'project';
 @import 'team';
+@import 'iteration';
 
 body {
   padding-bottom: 3rem;
