--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -24,6 +24,9 @@
     </h5>
     <ul>
       <li>
+        <%= link_to 'Project Home', page_url(:show_project) %>
+      </li>
+      <li>
         <%= link_to 'New Feature', page_url(:new_feature) %>
       </li>
       <li>
